# Envguard

./: .env.example  .env.schema.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/demo_project/: app.py
examples/js_demo/: server.js
examples/js_demo/frontend/: config.ts
tests/: test_envguard.py  test_scanner_js.py
