[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "0.1.0"
description = "Intelligent environment variable scanner and validator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["environment", "env", "dotenv", "validation", "devtools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]
dev    = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[project.scripts]
envguard = "envguard.cli:main"

[project.urls]
Homepage   = "https://github.com/yourusername/envguard"
Repository = "https://github.com/yourusername/envguard"
Issues     = "https://github.com/yourusername/envguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["envguard*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
